--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
+    <section id="map-container" role = "Restaurant Map" tabindex="-1">
       <div id="map"></div>
     </section>
     <section>
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select role = "tablist" tabindex="2" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select role = "Select Neighborhoods" tabindex="2" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
         <select role = "tablist" tabindex="2" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
