--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <section>
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select role = "Select Neighborhoods" tabindex="2" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select role = "menu" tabindex="2" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select role = "tablist" tabindex="2" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select role = "menu" tabindex="2" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
           <option roll = "Select Cuisine" tabindex="3" value="all">All Cuisines</option>
         </select>
       </div>
