--- a/restaurant.html
+++ b/restaurant.html
@@ -37,17 +37,17 @@
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+    <section id="restaurant-container" aria-lable="Restaurant Information">
+      <h1 id="restaurant-name" aria-lable = "Restaurant Name"></h1>
       <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
+      <p id="restaurant-cuisine" aria-lable = "Restaurant Cuisine Type"></p>
+      <p id="restaurant-address" aria-lable = "Restaurant Address"></p>
+      <table id="restaurant-hours" aria-lable = "Restaurant Hours of Operation"></table>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
     <section id="reviews-container">
-      <ul id="reviews-list"></ul>
+      <ul id="reviews-list" aria-lable = "Reviews"></ul>
     </section>
     <!-- End reviews -->
   </main>
