--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container" tabindex="-1">
+    <section id="map-container">
       <div id="map" tabindex="-1" role = "application"></div>
     </section>
     <section>
@@ -32,7 +32,7 @@
           <option roll = "Select Cuisine" tabindex="3" value="all">All Cuisines</option>
         </select>
       </div>
-      <ul role = "tablist" tabindex="4" id="restaurants-list"></ul>
+      <ul role = "tablist" tabindex="2" id="restaurants-list"></ul>
     </section>
   </main>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
