--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section id="map-container">
       <div id="map" tabindex="-1" role = "application"></div>
     </section>
-    <section>
+    <section id = "restaurant-content">
       <div class="filter-options">
         <h2>Filter Results</h2>
         <select role = "menu" tabindex="2" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
