--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
 <body>
   <header>
     <nav>
-      <h1><a aria-label = "Home" tabindex="1" href="/">Restaurant Reviews</a></h1>
+      <h1><a aria-label = "Home" href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
   <main id="maincontent">
     <section id="map-container">
-      <div id="map" tabindex="-1" role = "application"></div>
+      <div id="map" role = "application"></div>
     </section>
     <section id = "restaurant-content">
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select role = "menu" tabindex="2" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select role = "menu" aria-label = "Select Neighborhood" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select role = "menu" tabindex="2" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
-          <option roll = "Select Cuisine" tabindex="3" value="all">All Cuisines</option>
+        <select role = "menu" aria-label = "Select Cuisine" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+          <option roll = "Select Cuisine" value="all">All Cuisines</option>
         </select>
       </div>
-      <ul role = "tablist" tabindex="2" id="restaurants-list"></ul>
+      <ul role = "tablist" id="restaurants-list"></ul>
     </section>
   </main>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
