--- a/restaurant.html
+++ b/restaurant.html
@@ -18,12 +18,14 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a aria-lable = "Home" tabindex="1" href="/">Restaurant Reviews</a></h1>
+      <h1><a aria-lable = "Home"  href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a role = "tablist" tabindex="2" href="/">Home</a></li>
-    </ul>
+    <nav>
+      <ul id="breadcrumb" aria-label = "Breadcrumb">
+        <li><a role = "tablist" href="/">Home</a></li>
+      </ul>
+    </nav>
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
@@ -32,8 +34,8 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section role = "tablist" tabindex="-1" id="map-container">
-      <div id="map"></div>
+    <section role = "tablist" id="map-container">
+      <div id="map" tabindex="-1" role = "application" aria-label="Restaurant Location"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
