--- a/restaurant.html
+++ b/restaurant.html
@@ -39,12 +39,12 @@
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container" aria-lable="Restaurant Information">
-      <h1 id="restaurant-name" aria-lable = "Restaurant Name"></h1>
+    <section id="restaurant-container" aria-label="Restaurant Information">
+      <h2 id="restaurant-name" aria-label = "Restaurant Name"></h2>
       <img id="restaurant-img">
-      <p id="restaurant-cuisine" aria-lable = "Restaurant Cuisine Type"> </p>
-      <p id="restaurant-address" aria-lable = "Restaurant Address"></p>
-      <table id="restaurant-hours" aria-lable = "Restaurant Hours of Operation"></table>
+      <p id="restaurant-cuisine" aria-label = "Restaurant Cuisine Type"> </p>
+      <p id="restaurant-address" aria-label = "Restaurant Address"></p>
+      <table id="restaurant-hours" aria-label = "Restaurant Hours of Operation"></table>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
